<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gpc.gpcsociety.AddEventActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temp_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_title"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temp_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_event_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_date"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temp_event_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_event_date">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_event_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_venue"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temp_event_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_event_venue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_event_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_budget"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temp_event_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_event_budget">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_event_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_status"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/clients_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_event_status"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/submitButtonEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit" />

</RelativeLayout>
